--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "moment": "^2.29.1"
+        "moment": "^2.29.1",
+        "owl.carousel": "^2.3.4"
     }
 }
